Fixed spacing for h2's and h3's.

--- a/css/main.css
+++ b/css/main.css
@@ -101,10 +101,10 @@ h1{
 }
 h2{
   text-align: center;
-  padding: 0px;
+  padding: 9px;
   color: #b35360;
   font-size: 2rem;
-  margin-bottom: 0;
+  margin-bottom: -13px;
 }
 h3{
   font-weight: 300;
@@ -208,7 +208,6 @@ figcaption{
   width: 110px;
   margin: 10px;
   padding: 10px;
-  float: left;
 }
 .contact{
   overflow: hidden;
